--- a/package.json
+++ b/package.json
@@ -1,50 +1,21 @@
 {
   "name": "island",
-  "version": "1.0.14",
-  "description": "A package suite for building microservice.",
+  "version": "1.1.0",
+  "description": "A package suite for building microservice using TypeScript.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": {
-    "name": "wokim",
-    "email": "wokim@ea.com"
+    "name": "edge",
+    "email": "SPEARHEAD.NFS.SE@ea.com"
   },
   "scripts": {
+    "postinstall": "gulp build",
     "build": "gulp build",
+    "watch": "gulp build && gulp watch",
     "clean": "gulp clean",
     "test": "gulp build && DEBUG=* jasmine"
   },
   "dependencies": {
-    "amqp-connection-manager": "^1.3.1",
-    "amqplib": "^0.4.0",
-    "bl": "^1.0.1",
-    "bluebird": "^3.1.5",
-    "commander": "^2.9.0",
-    "debug": "^2.2.0",
-    "del": "^2.2.0",
-    "event-stream": "^3.3.2",
-    "gulp": "",
-    "jsonwebtoken": "^5.5.4",
-    "lodash": "^4.1.0",
-    "moment": "^2.11.1",
-    "mongoose": "^4.3.7",
-    "msgpack5": "^3.3.0",
-    "node-etcd": "^4.2.1",
-    "node-uuid": "^1.4.7",
-    "qs": "^6.0.2",
-    "redis": "^2.4.2",
-    "restify": "^4.0.3",
-    "socket.io": "^1.4.5",
-    "source-map-support": "^0.4.0",
-    "uid2": "0.0.3"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jasmine": "^2.2.1",
-    "gulp-node-inspector": "^0.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp-util": "^3.0.7",
-    "heapdump": "^0.3.7",
-    "jasmine": "^2.4.1"
+    "gulp": ""
   }
 }
