--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A package suite for building microservice using TypeScript.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "author": {
-    "name": "edge",
-    "email": "SPEARHEAD.NFS.SE@ea.com"
-  },
+  "author": "wokim <wonshikkim.kr@gmail.com>",
+  "contributors": [
+    "heycalmdown <hey.calmdown@gmail.com>"
+  ],
   "scripts": {
     "postinstall": "gulp build",
     "build": "gulp build",
@@ -16,6 +16,23 @@
     "test": "gulp build && DEBUG=* jasmine"
   },
   "dependencies": {
-    "gulp": ""
+    "amqplib": "^0.4.2",
+    "bluebird": "^3.4.6",
+    "cls-bluebird": "^2.0.1",
+    "cls-mongoose": "^2.0.1",
+    "continuation-local-storage": "^3.2.0",
+    "debug": "^2.2.0",
+    "inversify": "^2.0.0",
+    "lodash": "^4.15.0",
+    "msgpack5": "^3.4.0",
+    "node-uuid": "^1.4.7",
+    "reflect-metadata": "^0.1.8",
+    "schema-inspector": "^1.6.6",
+    "source-map-support": "^0.4.2",
+    "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-jasmine": "^2.4.1"
   }
 }
