--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ env:
 
 before_script:
   - docker run -d -p 5672:5672 --name rabbitmq rabbitmq
+
+script:
+  - gulp coverage
+
+after_script:
+  - npm i coveralls && cat ./coverage/lcov.info | coveralls
