--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gulp build",
     "watch": "gulp build && gulp watch",
     "clean": "gulp clean",
-    "test": "gulp build && DEBUG=* jasmine"
+    "test": "gulp build && DEBUG=* jasmine",
+    "coverage": "gulp coverage"
   },
   "dependencies": {
     "amqplib": "^0.4.2",
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-jasmine": "^2.4.1"
+    "gulp-istanbul": "^1.1.1",
+    "gulp-jasmine": "^2.4.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "remap-istanbul": "^0.6.4"
   }
 }
