Change dependencies to meet old island

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "amqplib": "^0.4.2",
-    "bluebird": "^3.4.6",
+    "bluebird": "<3.0.0",
     "cls-bluebird": "^2.0.1",
     "cls-mongoose": "^2.0.1",
     "continuation-local-storage": "^3.2.0",
     "debug": "^2.2.0",
-    "inversify": "^2.0.0",
+    "inversify": "2.0.0-beta.5",
     "lodash": "^4.15.0",
     "msgpack5": "^3.4.0",
     "node-uuid": "^1.4.7",
