--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "continuation-local-storage": "^3.2.0",
     "debug": "^2.2.0",
     "inversify": "2.0.0-beta.5",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.1",
+    "mongoose": "^4.6.1",
     "msgpack5": "^3.4.0",
     "node-uuid": "^1.4.7",
+    "redis": "^2.6.2",
     "reflect-metadata": "^0.1.8",
+    "restify": "^4.1.1",
     "schema-inspector": "^1.6.6",
+    "socket.io": "^1.4.8",
     "source-map-support": "^0.4.2",
     "winston": "^2.2.0"
   },
