--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-istanbul": "^1.1.1",
     "gulp-jasmine": "^2.4.1",
     "gulp-sourcemaps": "^1.6.0",
-    "remap-istanbul": "^0.6.4"
+    "remap-istanbul": "^0.6.4",
+    "std-mocks": "^1.0.1"
   }
 }
