Add Code Climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ script:
 
 after_script:
   - npm i coveralls && cat ./coverage/lcov-remap.info | coveralls
+  - npm i codeclimate-test-reporter && CODECLIMATE_REPO_TOKEN=9659b75eb35f7695fcbf58818e218f069a9a681206a9c9ea331e8b30fa386336 codeclimate-test-reporter < ./coverage/lcov-remap.info
+
