--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ install:
   - npm install
 
 env:
-  - RABBITMQ_HOST=amqp://localhost:5672
-  - ISLAND_TRACEMQ_QUEUE=trace
-  - ISLAND_TRACEMQ_HOST=amqp://localhost:5672
+  - RABBITMQ_HOST=amqp://localhost:5672 ISLAND_TRACEMQ_QUEUE=trace ISLAND_TRACEMQ_HOST=amqp://localhost:5672
 
 before_script:
   - docker run -d -p 5672:5672 --name rabbitmq rabbitmq
