--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,14 @@
+engines:
+  duplication:
+  	enabled: true
+    config:
+    	languages:
+      - javascript
+ratings:
+  paths:
+  - src/**
+  - spec/**
+
 exclude_paths:
 - spec/**/*
 - "typings/**/*"
