fix configs for codeclimate test (2)

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,10 @@
 engines:
+  fixme:
+    enabled: true
   duplication:
-  	enabled: true
+    enabled: true
     config:
-    	languages:
+      languages:
       - javascript
 ratings:
   paths:
