add type"numberOrQuery" in sanitize, validate add tests on specs #20

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,16 @@
+engines:
+  fixme:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - javascript
+ratings:
+  paths:
+  - src/**
+  - spec/**
+
 exclude_paths:
 - spec/**/*
 - "typings/**/*"
