Introduce @types of TS-2.0 (#44)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,20 @@
     "coverage": "gulp coverage"
   },
   "dependencies": {
+    "@types/amqplib": "^0.5.0",
+    "@types/bl": "^0.8.30",
+    "@types/bluebird": "^3.0.35",
+    "@types/inversify": "^2.0.31",
+    "@types/jasmine": "^2.5.37",
+    "@types/jsonwebtoken": "^7.1.33",
+    "@types/lodash": "^4.14.38",
+    "@types/mongoose": "^4.5.41",
+    "@types/node-uuid": "0.0.28",
+    "@types/qs": "^6.2.30",
+    "@types/redis": "^0.12.32",
+    "@types/restify": "^2.0.34",
+    "@types/socket.io": "^1.4.27",
+    "@types/winston": "0.0.30",
     "amqplib": "^0.4.2",
     "bluebird": "<3.0.0",
     "cls-bluebird": "^2.0.1",
