--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "debug": "^2.2.0",
     "inversify": "2.0.0-beta.5",
     "island-loggers": "^0.1.0",
+    "island-di": "^0.1.0",
     "lodash": "^4.16.1",
     "mongoose": "^4.6.1",
     "msgpack5": "^3.4.0",
