Change all of typings to go @types/*

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/redis": "^0.12.32",
     "@types/restify": "^2.0.34",
     "@types/socket.io": "^1.4.27",
-    "@types/winston": "0.0.30",
+    "@types/winston": "^0.0.32",
     "amqplib": "^0.4.2",
     "bluebird": "<3.0.0",
     "cls-bluebird": "^2.0.1",
@@ -39,8 +39,8 @@
     "continuation-local-storage": "^3.2.0",
     "debug": "^2.2.0",
     "inversify": "2.0.0-beta.5",
-    "island-loggers": "^0.1.0",
     "island-di": "^0.1.0",
+    "island-loggers": "^0.1.0",
     "lodash": "^4.16.1",
     "mongoose": "^4.6.1",
     "msgpack5": "^3.4.0",
