--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "noUnusedLocals": true
   },
   "include": [
-    "src/**/*",
-    "typings/winston/*",
-    "typings/msgpack5/*"
+    "src/**/*"
   ],
   "exclude": [
     "dist",
