--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "gulp-istanbul": "^1.1.1",
     "gulp-jasmine": "^2.4.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^7.0.1",
     "remap-istanbul": "^0.6.4",
     "std-mocks": "^1.0.1",
+    "tslint": "^4.3.1",
     "typescript": "<2.2"
   }
 }
