refact: Change "node-uuid" to "uuid"

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/lodash": "^4.14.38",
     "@types/mongoose": "^4.5.41",
     "@types/msgpack5": "^3.4.0",
-    "@types/node-uuid": "0.0.28",
+    "@types/uuid": "^2.0.29",
     "@types/qs": "^6.2.30",
     "@types/redis": "^0.12.32",
     "@types/restify": "^2.0.34",
@@ -44,7 +44,7 @@
     "lodash": "^4.16.1",
     "mongoose": "^4.6.1",
     "msgpack5": "^3.4.0",
-    "node-uuid": "^1.4.7",
+    "uuid": "^3.0.1",
     "qs": "^6.2.1",
     "redis": "^2.6.2",
     "reflect-metadata": "^0.1.8",
