--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cls-mongoose": "^2.0.1",
     "continuation-local-storage": "^3.2.0",
     "debug": "^2.2.0",
+    "dns-consul": "^1.0.0",
     "inversify": "2.0.0-beta.5",
     "island-di": "^1.1.0",
     "island-loggers": "^1.0.0",
