--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
   - "6"
 
 install:
-  - npm install -g jasmine gulp typescript@2.1
+  - npm install -g jasmine gulp
   - npm install
 
 env:
