fix: fixed verison @types/jsonwebtoken:7.2.0

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/bluebird": "^3.0.35",
     "@types/inversify": "2.0.32",
     "@types/jasmine": "^2.5.37",
-    "@types/jsonwebtoken": "^7.1.33",
+    "@types/jsonwebtoken": "7.2.0",
     "@types/lodash": "4.14.56",
     "@types/mongoose": "^4.5.41",
     "@types/msgpack5": "^3.4.0",
