--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@types/jasmine": "^2.5.37",
     "@types/jsonwebtoken": "7.2.0",
     "@types/lodash": "4.14.56",
+    "@types/mongodb": "ts2.2",
     "@types/mongoose": "^4.5.41",
     "@types/msgpack5": "^3.4.0",
-    "@types/uuid": "^2.0.29",
     "@types/qs": "^6.2.30",
     "@types/redis": "^0.12.32",
     "@types/restify": "^2.0.34",
     "@types/socket.io": "^1.4.27",
+    "@types/uuid": "^2.0.29",
     "@types/winston": "^0.0.32",
     "amqplib": "^0.4.2",
     "bluebird": "<3.0.0",
@@ -38,15 +39,15 @@
     "cls-mongoose": "^2.0.1",
     "continuation-local-storage": "^3.2.0",
     "debug": "^2.2.0",
+    "deprecated-decorator": "^0.1.6",
     "dns-consul": "^1.0.0",
     "inversify": "2.0.0-beta.5",
     "island-di": "^1.1.0",
     "island-loggers": "^1.0.0",
     "lodash": "^4.16.1",
-    "mongoose": "^4.6.1",
     "mongodb-uri": "0.9.7",
+    "mongoose": "^4.6.1",
     "msgpack5": "^3.4.0",
-    "uuid": "^3.0.1",
     "qs": "^6.2.1",
     "redis": "^2.6.2",
     "redis-bluebird": "http://github.com/heycalmdown/redis-bluebird/tarball/master",
@@ -55,6 +56,7 @@
     "schema-inspector": "^1.6.6",
     "socket.io": "^1.4.8",
     "source-map-support": "^0.4.2",
+    "uuid": "^3.0.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
