--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/jasmine": "^2.5.37",
     "@types/jsonwebtoken": "7.2.0",
     "@types/lodash": "4.14.56",
-    "@types/mongoose": "^4.5.41",
+    "@types/mongodb": "2.2.3",
+    "@types/mongoose": "4.7.15",
     "@types/msgpack5": "^3.4.0",
+    "@types/node": "7.0.29",
     "@types/uuid": "^2.0.29",
     "@types/qs": "^6.2.30",
     "@types/redis": "^0.12.32",
@@ -49,7 +51,7 @@
     "uuid": "^3.0.1",
     "qs": "^6.2.1",
     "redis": "^2.6.2",
-    "redis-bluebird": "http://github.com/heycalmdown/redis-bluebird/tarball/master",
+    "redis-bluebird": "^1.0.0",
     "reflect-metadata": "^0.1.8",
     "restify": "^4.1.1",
     "schema-inspector": "^1.6.6",
