--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/jasmine": "^2.5.37",
     "@types/jsonwebtoken": "7.2.0",
     "@types/lodash": "4.14.56",
-    "@types/mongodb": "ts2.2",
-    "@types/mongoose": "^4.5.41",
+    "@types/mongodb": "2.2.3",
+    "@types/mongoose": "4.7.15",
     "@types/msgpack5": "^3.4.0",
     "@types/node": "7.0.29",
     "@types/qs": "^6.2.30",
