--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@types/amqplib": "^0.5.0",
     "@types/bl": "^0.8.30",
-    "@types/bluebird": "^3.0.35",
+    "@types/bluebird": "3.5.5",
     "@types/inversify": "2.0.32",
     "@types/jasmine": "^2.5.37",
     "@types/jsonwebtoken": "7.2.0",
