--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "inversify": "2.0.0-beta.5",
     "island-di": "^1.1.0",
     "island-loggers": "^1.0.0",
-    "island-status-exporter": "*",
+    "island-status-exporter": "^1.0.0",
     "lodash": "^4.16.1",
     "mongodb-uri": "0.9.7",
     "mongoose": "^4.6.1",
