--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "island",
-  "version": "1.10.0",
+  "version": "1.10.99-edge-lts.1",
   "description": "A package suite for building microservice using TypeScript.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
